<resources>
    <string name="app_name">Product App</string>

    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_search">Search</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>

    <string name="title_dynamicfavorite">DynamicFavorite</string>
    <string name="brand_of_product">Brand of Product</string>
    <string name="category">Category</string>

    <string name="my_name">Moh. Bahrul \'Ulum</string>
    <string name="my_email">belajarkoding97@gmail.com</string>
    <string name="my_address">Jl. Raya Mangaran 01/04, Desa Mangaran, Kecamatan Mangaran, Kabupaten Situbondo, Jawa timur.</string>
    <string name="my_instagram">\@ulumbahrul_15</string>
    <string name="my_linkedin">Moh. Bahrul \'Ulum</string>
    <string name="my_github">MohBahrulUlum15</string>
    <string name="menu_info">Info</string>

    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
</resources>