<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.info.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginEnd="8dp"
            tools:ignore="MissingConstraints">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_item_photo"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/my_photo"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/my_name"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:drawableStart="@drawable/ic_email_24"
                            android:drawablePadding="12dp"
                            android:text="@string/my_email"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/tv_name"
                            app:layout_constraintTop_toBottomOf="@id/tv_name" />

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_12"
                            android:drawableStart="@drawable/ic_location_24"
                            android:drawablePadding="12dp"
                            android:text="@string/my_address"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/tv_email"
                            app:layout_constraintTop_toBottomOf="@id/tv_email" />

                        <TextView
                            android:id="@+id/tv_instagram"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_12"
                            android:drawableStart="@drawable/instagram"
                            android:drawablePadding="12dp"
                            android:text="@string/my_instagram"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/tv_location"
                            app:layout_constraintTop_toBottomOf="@id/tv_location" />

                        <TextView
                            android:id="@+id/tv_linkedin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_12"
                            android:drawableStart="@drawable/linkedin"
                            android:drawablePadding="12dp"
                            android:text="@string/my_linkedin"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/tv_instagram"
                            app:layout_constraintTop_toBottomOf="@id/tv_instagram" />

                        <TextView
                            android:id="@+id/tv_github"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_12"
                            android:drawableStart="@drawable/github"
                            android:drawablePadding="12dp"
                            android:text="@string/my_github"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/tv_linkedin"
                            app:layout_constraintTop_toBottomOf="@id/tv_linkedin" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>